# agentmemory

./: .gitignore  AGENTS.md  README.md  __version__.py  install.sh  pyproject.toml  uninstall.sh
.agents/: OUTPUTS.md
.agents/memory/adr/: ADR-0001-agents-memory-is-the-canonical-agent-neutral-shared-memory-location.md  ADR-0002-shared-agent-assets-use-one-install-many-symlinks.md  ADR-0003-event-shards-are-the-canonical-write-unit-summaries-are-derived.md  ADR-0004-shared-memory-requires-explicit-commit-and-push-to-become-collaborative.md  INDEX.md  (+12 more)
.codex/: config.toml
.githooks/: post-checkout  post-merge  post-rewrite  pre-commit
docs/: agent-runtime-adapter-refactor-plan.md  gestalt-2-episode-graph-design.md  shared-repo-memory-system-design.md
scripts/shared-repo-memory/: agent_support.py  auto-bootstrap.py  bootstrap-repo.py  bootstrap-repo.sh  build-catchup.py  common.py  dedup.py  enrich-shard.py  episode_graph.py  install-user-assets.sh  install.py  models.py  notify-wrapper.sh  post-compact.py  post-turn-notify.py  pre-commit-memory-guard.py  project-pre-commit.sh  promote-adr.py  promote-adr.sh  prompt-guard.py  publish-checkpoint.py  rebuild-summary.py  run-catchup.sh  runtime-log-prefix.sh  session-start.py  uninstall.py  validate-notify.sh
skills/adr-inspector/: SKILL.md
skills/adr-promoter/: SKILL.md
skills/architecture-discovery/: SKILL.md
skills/memory-bootstrap/: SKILL.md
skills/memory-checkpointer/: SKILL.md
skills/memory-writer/: SKILL.md
skills/news/: SKILL.md
skills/shard-enricher/: SKILL.md
(+65 files in other folders)
